[project]
name = "phantom_any.run"
version = "1.4.1"
description = "Phantom connector for ANY.RUN"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyrun-sdk==1.5.3",
    "requests==2.32.3",
]

# Ruff linting
[tool.ruff]
line-length = 145
target-version = "py39"

[tool.ruff.lint]
select = [ # Auto-fixable rules only
    "I",    # isort
    "UP",   # pyupgrade
    "F401", # unused imports
    "RUF"   # ruff rules
]

ignore = [
    "RUF012", # Not auto-fixable (remove eventually)
    "RUF001" # Not auto-fixable (remove eventually)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "UP035"]  # __init__.py file exceptions

# Keep complexity below 28
[tool.ruff.lint.mccabe]
max-complexity = 28

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# HTML linting
[tool.djlint]
profile = "django"
extension = "html"
indent = 2

# Auto-fixable rules only
include = "H008,H009,H010,H014,H024,H026,H033,T028,T034"

# Ignore troublesome rules that aren't auto-fixable or causing issues
ignore = "D004,D018,H005,H006,H007,H011,H012,H013,H015,H016,H017,H019,H020,H021,H022,H023,H025,H029,H030,H031,H035,H036,H037,J004,J018,T001,T002,T003,T027,T032"

# Markdown linting
[tool.mdformat]
wrap = true
number = true

# Semgrep configuration
[tool.semgrep]
config = [
    "p/python", # Built-in Python rules
    "semgrep", # Look for our other rules
    "r/typescript.react.security.audit.react-dangerouslysetinnerhtml.react-dangerouslysetinnerhtml" # TypeScript React security rule
]
ignore-patterns = [
    "node_modules/",
    "build/",
    "dist/",
    "vendor/",
    "env/",
    ".env/",
    "venv/",
    ".venv/",
    ".tox/",
    "*.min.js",
    "test/",
    "tests/",
    "*_test.go",
    ".semgrep",
    "wheels/",
    ".html",
    "*.md",
    "*.svg"
]

[tool.uv.sources]
pytest-splunk-soar-connectors = { git = "https://github.com/splunk/pytest-splunk-soar-connectors" }

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-splunk-soar-connectors",
]
